cmake_minimum_required(VERSION 3.28)
project(online_chatroom)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./bin)
include_directories(./include)
aux_source_directory(./src SERVERSRC)
message("server source: ${SERVERSRC}")
list(REMOVE_ITEM SERVERSRC ./src/client.cc)
message("server source: ${SERVERSRC}")
add_executable(server ${SERVERSRC}
        src/handler.cc)
target_link_libraries(server jsoncpp pthread mysqlpp)
# add_definitions(-DDEBUG)
# set(CMAKE_CXX_COMPILER clang++)

add_executable(client ./src/client.cc)
target_link_libraries(client jsoncpp pthread mysqlpp)
